# pandas-orm

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: static.yml
django_backend/: Dockerfile
django_backend/rest/: settings.py  urls.py
django_backend/rest/quickstart/: apps.py  tests.py
docker_services/postgres/: Dockerfile  postgresql.conf
docker_services/postgres/main/: pg_hba.conf
docker_services/postgres/mock_db/: temp_data.sql  temp_schema.sql
docs/: .buildinfo  django_usage.html  genindex.html  index.html  installation.html  objects.inv  pandas_orm.html  search.html  search.js  searchindex.js  sqlalchemy_usage.html  usage.html
docs/.doctrees/: django_usage.doctree  environment.pickle  index.doctree  installation.doctree  sqlalchemy_usage.doctree  usage.doctree
docs/_sources/: django_usage.rst.txt  index.rst.txt  sqlalchemy_usage.rst.txt
docs/pandas_orm/: base.html  dataframe.html  django.html  sqlalchemy.html
examples/: sqlalchemy_example.py
packaging/: docs.bash
scripts/: docs.bash  install.sh
source_docs/: Makefile  conf.py  django_usage.rst  index.rst  installation.rst  sqlalchemy_usage.rst  usage.rst
sqlalchemy_backend/: config.py
sqlalchemy_backend/data_classes/: base_data_class.py  collaborator.py
sqlalchemy_backend/models/: base.py  collaborator.py
sqlalchemy_backend/tests/: test_database_manager.py
src/pandas_orm/: dataframe.py  exceptions.py
tests/django/: __init__.py
tests/sqlalchemy/: __init__.py  test_database_manager.py
(+61 files in other folders)
